# cargo-guppy

./: .gitattributes  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Hakari.toml  LICENSE-MIT  README.md  aliases.js  release.toml  search-index.js  settings.html  source-files.js
cargo-guppy/: Cargo.toml  README.md  README.tpl
cargo-guppy-lib/: Cargo.toml
cargo-guppy-lib/fixtures/: metadata1.json
cargo-guppy-lib/src/: diff.rs  lockfile.rs
cargo-guppy/src/: core.rs  diff.rs  lib.rs  main.rs  mv.rs
fixtures/: Cargo.toml  README.md  all.html  fn.package_id.html  index.html  metadata1.json  sidebar-items.js
fixtures/dep_helpers/: fn.assert_link_order.html  index.html  struct.DirectionDesc.html  trait.GraphAssert.html  trait.GraphMetadata.html  trait.GraphQuery.html  trait.GraphSet.html
fixtures/details/: index.html  struct.FixtureDetails.html  struct.LinkDetails.html  struct.PackageDetails.html  struct.PlatformResults.html
fixtures/determinator-paths/: README.md  git-diff.out  guppy-linux.json  guppy-win.json
fixtures/guppy/: metadata_guppy_44b62fa.json  metadata_guppy_78cb7e8.json  metadata_guppy_869476c.json  package-rules.toml  package_rules.toml  path_rules.toml
fixtures/invalid/: build_targets_empty_kinds.json  build_targets_non_bin.json  optional_dev_dep.json
fixtures/json/: index.html  sidebar-items.js  static.FAKE_AUTHOR.html  static.METADATA1.html  static.METADATA1_DATATEST.html  static.METADATA1_DTOA.html  static.METADATA1_PATH.html  static.METADATA1_REGION.html  static.METADATA1_TESTCRATE.html  static.METADATA2.html  static.METADATA2_PATH.html  static.METADATA2_QUOTE.html  static.METADATA2_TESTCRATE.html  static.METADATA2_WALKDIR.html  static.METADATA_BUILD_TARGETS1.html  static.METADATA_BUILD_TARGETS1_PATH.html  static.METADATA_BUILD_TARGETS1_TESTCRATE.html  static.METADATA_CYCLE1.html  static.METADATA_CYCLE1_BASE.html  static.METADATA_CYCLE1_HELPER.html  static.METADATA_CYCLE1_PATH.html  static.METADATA_CYCLE2.html  static.METADATA_CYCLE2_LOWER_A.html  static.METADATA_CYCLE2_LOWER_B.html  static.METADATA_CYCLE2_PATH.html  static.METADATA_CYCLE2_UPPER_A.html  static.METADATA_CYCLE2_UPPER_B.html  static.METADATA_DUPS.html  static.METADATA_DUPS_BYTES_03.html  static.METADATA_DUPS_BYTES_05.html  static.METADATA_DUPS_LAZY_STATIC_02.html  static.METADATA_DUPS_LAZY_STATIC_1.html  static.METADATA_DUPS_PATH.html  static.METADATA_DUPS_TESTCRATE.html  static.METADATA_LIBRA.html  static.METADATA_LIBRA_9FFD93B.html  static.METADATA_LIBRA_9FFD93B_PATH.html  static.METADATA_LIBRA_ADMISSION_CONTROL_SERVICE.html  static.METADATA_LIBRA_BACKTRACE.html  static.METADATA_LIBRA_CFG_IF.html  (+36 more)
fixtures/large/: metadata_libra.json
fixtures/small/: alternate-registries.json  builddep.json  metadata-cargo-nextest.json  metadata1.json  metadata_build_targets1.json  metadata_cycle2.json  metadata_cycle_features.json  metadata_proc_macro1.json  metadata_targets1.json  weak-namespaced-features.json
fixtures/src/: dep_helpers.rs  details.rs  json.rs  lib.rs
guppy/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  all.html  enum.DependencyKind.html  enum.Error.html  enum.TargetFeatures.html  enum.TargetSpecError.html  index.html  sidebar-items.js  struct.CargoMetadata.html  struct.Metadata.html  struct.MetadataCommand.html  struct.PackageId.html  struct.Platform.html  trait.Obs.html
guppy-cmdlib/: Cargo.toml
guppy-cmdlib/src/: lib.rs  proptest.rs
guppy-summaries/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
guppy-summaries/src/: diff.rs  lib.rs  report.rs  summary.rs
guppy/config/: index.html  struct.Config.html
guppy/dependency_kind/: enum.DependencyKind.html
guppy/diff/: index.html  struct.Diff.html  struct.DiffOptions.html
guppy/errors/: enum.Error.html  enum.FeatureBuildStage.html  enum.FeatureGraphWarning.html  index.html
guppy/examples/: deps.rs  print_by_level.rs  print_dot.rs  remove_dev_only.rs  topo_sort.rs
guppy/fixtures/: metadata2.json  metadata_dups.json
guppy/graph/: enum.BuildTargetId.html  enum.BuildTargetKind.html  enum.DependencyDirection.html  enum.EnabledStatus.html  enum.EnabledTernary.html  enum.PackageSource.html  enum.PlatformStatus.html  enum.UnknownStatus.html  index.html  sidebar-items.js  struct.BuildTarget.html  struct.Cycles.html  struct.DependencyEdge.html  struct.DependencyLink.html  struct.DependencyLinkIter.html  struct.DependencyMetadata.html  struct.DependencyReq.html  struct.DependsCache.html  struct.DotWrite.html  struct.EnabledStatus.html  struct.FeatureGraph.html  struct.IntoIds.html  struct.IntoIterIds.html  struct.IntoIterLinks.html  struct.IntoIterMetadatas.html  struct.IntoLinks.html  struct.IntoMetadatas.html  struct.PackageEdge.html  struct.PackageGraph.html  struct.PackageGraphData.html  struct.PackageIdIter.html  struct.PackageLink.html  struct.PackageMetadata.html  struct.PackageQuery.html  struct.PackageResolve.html  struct.PackageSelect.html  struct.PackageSet.html  struct.PlatformEval.html  struct.Prop010Resolver.html  struct.Prop09Resolver.html  (+5 more)
guppy/lockfile/: index.html  struct.Lockfile.html  struct.Package.html  struct.PackageId.html
guppy/metadata_command/: struct.Metadata.html
guppy/obs/: trait.Obs.html
guppy/package_id/: struct.PackageId.html
guppy/src/: config.rs  debug_ignore.rs  dependency_kind.rs  diff.rs  errors.rs  lib.rs  lockfile.rs  macros.rs  metadata_command.rs  obs.rs  package_id.rs  platform.rs  sorted_set.rs  sorted_vec.rs
internal-tools/benchmarks/: Cargo.toml
internal-tools/cargo-compare/: Cargo.toml
internal-tools/fixture-manager/: Cargo.toml
internal-tools/proptest-ext/: Cargo.toml
target-spec/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
target-spec/src/: errors.rs  evaluator.rs  lib.rs  parser.rs  platform.rs  proptest.rs  simple_eval.rs  single_target.rs  spec.rs  summaries.rs  tests.rs  triple.rs  types.rs
tools/benchmarks/: .gitignore  Cargo.toml
tools/cargo-compare/: Cargo.toml
tools/cargo-hakari/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
tools/determinator/: CHANGELOG.md  Cargo.toml  README.md  (+2 more)
(+46516 files in other folders)
