[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@calibra.com>", "Brandon Williams <bmwill@calibra.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.8"
petgraph = "0.4.13"
semver = "0.9.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.0"
toml = "0.5.3"
