[workspace]
resolver = "2"
members = [
    "cargo-guppy",
    "fixtures",
    "guppy",
    "guppy-cmdlib",
    "guppy-summaries",
    "internal-tools/benchmarks",
    "internal-tools/cargo-compare",
    "internal-tools/fixture-manager",
    "internal-tools/proptest-ext",
    "target-spec",
    "tools/cargo-hakari",
    "tools/determinator",
    "tools/hakari",
    "workspace-hack",
]

# Recommended for color-eyre
[profile.dev.package.backtrace]
opt-level = 3

# Build guppy in opt mode for tests, speeding up test runs
[profile.test.package.guppy]
opt-level = 3
