[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
camino = "1.0.5"
# disable tracing integration since we don't use it
color-eyre = { version = "0.5.11", default-features = false }
clap = { version = "3.0.6", features = ["derive"] }
dialoguer = "0.9.0"
guppy = { version = "0.12.0", path = "../guppy", features = ["summaries"] }
guppy-cmdlib = { path = "../guppy-cmdlib" }
itertools = "0.10.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
toml_edit = "0.10.1"
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }
