[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
camino = "1.0.9"
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.1", default-features = false }
clap = { version = "3.1.18", features = ["derive"] }
dialoguer = "0.10.1"
guppy = { version = "0.14.0", path = "../guppy", features = ["summaries"] }
guppy-cmdlib = { path = "../guppy-cmdlib" }
itertools = "0.10.3"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml_edit = "0.13.4"
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }
