[package]
name = "fixtures"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
publish = false
edition = "2018"

[dependencies]
camino = "1.0.9"
guppy = { path = "../guppy" }
once_cell = "1.12.0"
pathdiff = "0.2.1"
pretty_assertions = "1.2.1"
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }
