[package]
name = "guppy-cmdlib"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
description = "CLI library for guppy"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
guppy = { path = "../guppy" }
structopt = "0.3.25"
proptest = { version = "1.0.0", optional = true }
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
proptest1 = ["proptest", "guppy/proptest1"]
