[package]
name = "guppy-cmdlib"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
description = "CLI library for guppy"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# disable tracing integration since we don't use it
clap = { version = "3.0.10", features = ["derive"] }
color-eyre = { version = "0.6.0", default-features = false }
guppy = { path = "../guppy" }
proptest = { version = "1.0.0", optional = true }
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
proptest1 = ["proptest", "guppy/proptest1"]
