[package]
name = "guppy-summaries"
version = "0.7.0"
description = "Build summaries for Cargo, created by guppy."
documentation = "https://docs.rs/guppy-summaries"
repository = "https://github.com/facebookincubator/cargo-guppy"
authors = ["Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "dependencies", "guppy", "summaries"]
categories = ["config", "data-structures", "development-tools", "parser-implementations"]
edition = "2021"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]
rust-version = "1.56"

[package.metadata.docs.rs]
all-features = true

[dependencies]
camino = { version = "1.0.7", features = ["serde1"] }
cfg-if = "1.0.0"
diffus = "0.10.0"
toml = { version = "0.5.8", features = ["preserve_order"] }
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
indoc = "1.0.4"
pretty_assertions = "1.2.0"
serde_json = "1.0.79"
