[package]
name = "guppy"
version = "0.10.1"
description = "Track and query Cargo dependency graphs."
documentation = "https://docs.rs/guppy"
repository = "https://github.com/facebookincubator/cargo-guppy"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "graph",
    "guppy",
]
categories = [
    "config",
    "data-structures",
    "development-tools",
    "parser-implementations",
]
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
camino = "1.0.5"
cargo_metadata = "0.14.0"
guppy-summaries = { version = "0.5.0", path = "../guppy-summaries", optional = true }
fixedbitset = { version = "0.4.0", default-features = false }
nested = "0.1.1"
indexmap = "1.7.0"
itertools = "0.10.1"
once_cell = "1.8.0"
pathdiff = "0.2.0"
petgraph = { version = "0.6.0", default-features = false }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rayon = { version = "1.5.1", optional = true }
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
smallvec = "1.6.1"
supercow = "0.1.0"
target-spec = { version = "0.8.0", path = "../target-spec" }
toml = { version = "0.5.8", optional = true }

[dev-dependencies]
fixtures = { path = "../fixtures" }
pretty_assertions = "0.7.2"

[features]
proptest1 = ["proptest", "proptest-derive", "target-spec/proptest1"]
rayon1 = ["rayon"]
summaries = ["guppy-summaries", "target-spec/summaries", "toml"]
