[package]
name = "target-spec"
version = "0.9.0"
description = "Evaluate Cargo.toml target specifications"
documentation = "https://docs.rs/target-spec"
repository = "https://github.com/facebookincubator/cargo-guppy"
authors = ["Jack Moffitt <metajack@fb.com>", "Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "targets", "platforms", "os", "cpu"]
categories = ["development-tools", "parser-implementations"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cfg-expr = { version = "0.10.0", features = ["targets"] }
proptest = { version = "1.0.0", optional = true }
serde = { version = "1.0.133", optional = true, features = ["derive"] }
target-lexicon = { version = "0.12.2", features = ["std"] }
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
toml = "0.5.8"

[features]
proptest1 = ["proptest"]
summaries = ["serde"]
