[package]
name = "guppy-benchmarks"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
edition = "2018"
publish = false  # this is a private crate

[dependencies]
guppy = { path = "../../guppy", features = ["proptest1"] }
proptest = "1.0.0"
proptest-ext = { path = "../proptest-ext" }
workspace-hack = { path = "../../workspace-hack"}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "package_graph"
harness = false
