[package]
name = "cargo-compare"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.51"
cargo = "0.57.0"
color-eyre = { version = "0.5.11", default-features = false }
diffus = "0.10.0"
either = "1.6.1"
itertools = "0.10.3"
guppy = { path = "../../guppy" }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
structopt = "0.3.25"
tempfile = "3.2.0"
once_cell = "1.8.0"
proptest = "1.0.0"
