[package]
name = "cargo-compare"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
cargo = "0.62.0"
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = { version = "0.6.1", default-features = false }
diffus = "0.10.0"
either = "1.6.1"
fs_extra = "1.2.0"
itertools = "0.10.3"
guppy = { path = "../../guppy" }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
tempfile = "3.3.0"
once_cell = "1.12.0"
pathdiff = "0.2.1"
proptest = "1.0.0"
