[package]
name = "fixture-manager"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
guppy = { path = "../../guppy", features = ["proptest1", "summaries"] }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
fixtures = { path = "../../fixtures" }
hakari = { path = "../../tools/hakari", features = ["proptest1", "summaries"] }
once_cell = "1.7.0"
proptest = "1.0.0"
proptest-ext = { path = "../proptest-ext" }
structopt = "0.3.21"
