[package]
name = "proptest-ext"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
publish = false  # this is a private crate

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.0.0"
workspace-hack = { path = "../../workspace-hack"}
