[package]
name = "proptest-ext"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
publish = false  # this is a private crate

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.0.0"
twox-hash = { version = "1.6.2", default-features = false }
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }
