[package]
name = "guppy-benchmarks"
version = "0.1.0"
authors = ["Rain <rain1@calibra.com>", "Brandon Williams <bmwill@calibra.com>"]
edition = "2018"
publish = false  # this is a private crate

[dependencies]
guppy = { path = "../../guppy", features = ["proptest010"] }
proptest = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "package_graph"
harness = false
