[package]
name = "cargo-compare"
version = "0.1.0"
authors = ["Rain <rain1@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
# This version of cargo has some fixes to the new feature resolver that are missing from cargo 0.44.0.
cargo = { git = "https://github.com/rust-lang/cargo.git", rev = "0227f048fcb7c798026ede6cc20c92befc84c3a4" }
diffus = "0.9.1"
either = "1.5.3"
itertools = "0.9.0"
guppy = { path = "../../guppy" }
guppy-cmdlib = { path = "../../guppy-cmdlib" }
once_cell = "1.3.1"
structopt = "0.3"
tempfile = "3.1.0"

[dev-dependencies]
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest010"] }
proptest = "0.10"
