[package]
name = "cargo-hakari"
version = "0.9.11"
description = "Manage workspace-hack packages to speed up builds in large workspaces."
documentation = "https://docs.rs/cargo-hakari"
edition = "2018"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools::cargo-plugins"]

[dependencies]
camino = "1.0.5"
cfg-if = "1.0.0"
clap = { version = "3.0.6", features = ["derive"] }
# disable tracing integration since we don't use it
color-eyre = { version = "0.5.11", default-features = false }
dialoguer = "0.9.0"
duct = "0.13.5"
enable-ansi-support = "0.1.1"
env_logger = "0.9.0"
guppy = { version = "0.12.4", path = "../../guppy" }
hakari = { version = "0.8.1", path = "../hakari", features = ["cli-support"] }
log = "0.4.14"
owo-colors = { version = "3.1.1", features = ["supports-colors"] }
supports-color = "1.3.0"
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3.2.0"
