[package]
name = "cargo-hakari"
version = "0.9.13"
description = "Manage workspace-hack packages to speed up builds in large workspaces."
documentation = "https://docs.rs/cargo-hakari"
edition = "2021"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools::cargo-plugins"]
rust-version = "1.56"

[dependencies]
camino = "1.0.7"
cfg-if = "1.0.0"
clap = { version = "3.1.6", features = ["derive"] }
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.1", default-features = false }
dialoguer = "0.10.0"
duct = "0.13.5"
enable-ansi-support = "0.1.2"
env_logger = "0.9.0"
guppy = { version = "0.14.0", path = "../../guppy" }
hakari = { version = "0.10.0", path = "../hakari", features = ["cli-support"] }
log = "0.4.14"
owo-colors = { version = "3.2.0", features = ["supports-colors"] }
supports-color = "1.3.0"
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3.3.0"
