[package]
name = "determinator"
version = "0.7.0"
description = "Figure out which packages changed between two commits to a workspace."
documentation = "https://docs.rs/determinator"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "guppy",
    "determinator",
    "package-changes",
    "build-caching",
]
categories = [
    "config",
    "development-tools",
]
include = [
    "README.md",
    "**/*.rs",
    # Include default rules with the package.
    "default-rules.toml",
]

[dependencies]
camino = "1.0.5"
globset = "0.4.8"
guppy = { version = "0.12.0", path = "../../guppy", features = ["rayon1", "summaries"] }
itertools = "0.10.1"
once_cell = "1.8.0"
petgraph = { version = "0.6.0", default-features = false, features = ["graphmap"] }
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
workspace-hack = { path = "../../workspace-hack"}

[dev-dependencies]
fixtures = { path = "../../fixtures" }
cfg-if = "1.0.0"
