[package]
name = "determinator"
version = "0.9.0"
description = "Figure out which packages changed between two commits to a workspace."
documentation = "https://docs.rs/determinator"
authors = ["Rain <rain1@fb.com>"]
edition = "2021"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "guppy",
    "determinator",
    "package-changes",
    "build-caching",
]
categories = ["config", "development-tools"]
include = [
    "README.md",
    "**/*.rs",
    # Include default rules with the package.
    "default-rules.toml",
]
rust-version = "1.56"

[dependencies]
camino = "1.0.7"
globset = "0.4.8"
guppy = { version = "0.14.0", path = "../../guppy", features = [
    "rayon1",
    "summaries",
] }
once_cell = "1.12.0"
petgraph = { version = "0.6.0", default-features = false, features = [
    "graphmap",
] }
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
fixtures = { path = "../../fixtures" }
cfg-if = "1.0.0"
