[package]
name = "fixture-manager"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
guppy = { path = "../../guppy", features = ["proptest010"] }
fixtures = { path = "../../fixtures" }
structopt = "0.3"
