[package]
name = "fixture-manager"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
clap = "2.33"
guppy = { path = "../../guppy", features = ["proptest010", "summaries"] }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest010"] }
fixtures = { path = "../../fixtures" }
once_cell = "1.4.0"
proptest-ext = { path = "../proptest-ext" }
structopt = "0.3"
