[package]
name = "hakari"
version = "0.2.0"
description = "Manage workspace-hack packages that do feature unification inside workspaces."
documentation = "https://docs.rs/determinator"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = [
    "development-tools",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
atomicwrites = "0.3.0"
camino = "1.0.1"
cfg-if = "1.0.0"
diffy = "0.2.1"
guppy = { version = "0.8.0", path = "../../guppy", features = ["rayon1"] }
pathdiff = "0.2.0"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rayon = "1.5.0"
serde = { version = "1.0.123", features = ["derive"], optional = true }
toml = { version = "0.5.8", optional = true }
twox-hash = { version = "1.6.0", default-features = false }

[dev-dependencies]
fixtures = { path = "../../fixtures" }

[features]
proptest1 = ["proptest", "proptest-derive", "guppy/proptest1"]
summaries = ["guppy/summaries", "serde", "toml"]
