[package]
name = "hakari"
version = "0.7.0"
description = "Manage workspace-hack packages that do feature unification inside workspaces."
documentation = "https://docs.rs/hakari"
edition = "2018"
repository = "https://github.com/facebookincubator/cargo-guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = [
    "development-tools",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ansi_term = { version = "0.12.1", optional = true }
atomicwrites = "0.3.0"
bimap = "0.6.1"
camino = "1.0.5"
cfg-if = "1.0.0"
debug-ignore = "1.0.1"
diffy = "0.2.1"
guppy = { version = "0.12.0", path = "../../guppy", features = ["rayon1"] }
include_dir = { version = "0.6.2", optional = true }
pathdiff = { version = "0.2.1", features = ["camino"] }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"], optional = true }
target-spec = { version = "0.9.0", path = "../../target-spec" }
toml = { version = "0.5.8", optional = true }
toml_edit = { version = "0.9.1", optional = true }
twox-hash = { version = "1.6.1", default-features = false }
workspace-hack = { path = "../../workspace-hack"}

[dev-dependencies]
fixtures = { path = "../../fixtures" }

[features]
proptest1 = ["proptest", "proptest-derive", "guppy/proptest1"]
cli-support = ["guppy/summaries", "ansi_term", "include_dir", "serde", "toml", "toml_edit"]
