[package]
name = "aarch64-active"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transitive = { path = "../transitive", features = ["inactive3-normal"] }

[build-dependencies]
transitive = { path = "../transitive", features = ["inactive3-build"] }

[dev-dependencies]
transitive = { path = "../transitive", features = ["inactive3-dev"] }

[features]
extra = ["transitive/inactive3-extra"]

[workspace]
