[package]
name = "inactive"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transitive = { path = "../transitive", features = ["inactive-normal"] }

[build-dependencies]
transitive = { path = "../transitive", features = ["inactive-build"] }

[dev-dependencies]
transitive = { path = "../transitive", features = ["inactive-dev"] }

[features]
extra = ["transitive/extra"]

[workspace]
