[package]
name = "transitive"
version = "0.1.0"
authors = ["Fake Author <fakeauthor@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-feature = []
dev-feature = []
inactive-normal = []
inactive-build = []
inactive-dev = []
extra = []
inactive2-normal = []
inactive2-build = []
inactive2-dev = []
inactive2-extra = []

[workspace]
